Penguin Route/styles.css
body {
  font-family: 'Karla', sans-serif;
  font-size: 16px;
  vertical-align: middle;
}

#output{
  background-color:#ffffff;
  height: 100%;
  border: 1px solid black;
  padding: 10px;
  border-spacing:0;
  width: 250px;
}

#output tr > td > p:last-child{
  font-size: 12px;
  padding: 0px;
  margin: 0px;
}

#output td{
  min-height: 35px;
}

#output tr > td:first-child > img{
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a{
  color: inherit;
  text-decoration: none;
}

li{
  list-style-type: none;
}

.confirm{
  background-color: #f4eb42;

}

#container{
  display: flex;
}

#container > div:nth-child(2)
{
  padding-left: 25px;
}

#container > div:nth-child(1)
{

}

#container ul{
  border: 1px solid black;
  padding: 0px;
}

#container li > div{
  border: 1px solid black;
  display: table-cell;
  text-align: center;
}

#container p{
  margin: 3px;
  padding: 0;
}

#container li > div:nth-child(1){
  vertical-align: middle;
  min-width: 50px;
  max-width: 50px;
}

#container li > div:nth-child(2){
  min-width: 250px;
  max-width: 250px;
}

#container li > div:nth-child(3){
  vertical-align: middle;
  min-width: 150px;
  max-width: 150px;
}

#container li > div:nth-child(4){
  vertical-align: middle;
  min-width: 50px;
  max-width: 50px;
}

.via{
  max-width: 100px;
  min-width: 100px;
}

